--- a/src/404.njk
+++ b/src/404.njk
@@ -1,22 +1,19 @@
 ---
-title: NWASST's missing website page.
+title: 404 Error | NWASST's missing website page.
 layout: base.njk
 templateEngineOverride: njk,md
 ---
-<!-- Donation Cancelation section -->
-<div id="ourStory" class="position-relative overflow-hidden p-3 p-md-3 m-md-3 text-center">
-  <div class="col-md-6 mx-auto my-3 border border-success border-4 rounded alert alert-success" role="alert">
-    <h1 class="display-4 pb-3 fw-normal">The link  you request cannot be found.</h1>
-    <p class="lead fw-normal">Please let us know what link cannot be found.</p>
-  </div>
-      <p class="py-3">
+<!-- Page Intro -->
+<div class="row justify-content-center text-center">
+  <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
+    <h1 class="h1">404 - The link  you request cannot be found.</h1>
+    <p class="p-3 lead">Please let us know what link cannot be found.</p>
+    <p class="p-3 lead">
      We would appreciate if you send us the URL that you were  trying to access when you were redirected to our error page (404 page). Thank you! <a href="mailto:{{site.email}}">Contact us</a>
     </p>
-
-    <p class="lead">
+    <p class="p-3 lead">
       <a class="btn btn-outline-secondary btn-sm" href="{{site.url}}" role="button" target="_self" rel="noopener noreferrer" >Continue to homepage</a>
     </p>
-  <div class="product-device shadow-sm d-none d-md-block"></div>
-  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+  </div>
 </div>
-<!-- END Donation Cancelation section -->
+<!-- End Page Intro -->
