--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -6,29 +6,29 @@
     <hr class="d-md-none text-black-50">
     <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
       <li class="nav-item col-6 col-md-auto">
-        <a class="nav-link p-2 {{ 'active' if page.fileSlug == '' }}" 
+        <a class="nav-link p-2 m-2 {{ 'active' if page.fileSlug == '' }}" 
         href="{{site.url}}" target="_self" rel="noopener noreferrer" >Home</a>
       </li>
       <li class="nav-item col-6 col-md-auto">
-        <a class="nav-link p-2 {{ 'active' if '/about' in page.url }}" href="{{site.url + 'about/'}}" target="_self" rel="noopener noreferrer" >About</a>
+        <a class="nav-link p-2 m-2 {{ 'active' if '/about' in page.url }}" href="{{site.url + 'about/'}}" target="_self" rel="noopener noreferrer" >About</a>
       </li>
       <li class="nav-item col-6 col-md-auto">
-        <a class="nav-link p-2 {{ 'active' if '/services' in page.url }}" href="{{site.url + 'services/'}}" target="_self" rel="noopener noreferrer" >Services</a>
+        <a class="nav-link p-2 m-2 {{ 'active' if '/services' in page.url }}" href="{{site.url + 'services/'}}" target="_self" rel="noopener noreferrer" >Services</a>
       </li>
       <li class="nav-item col-6 col-md-auto">
-        <a class="nav-link p-2 {{ 'active' if '/outreach' in page.url }}" href="{{site.url + 'outreach/'}}" target="_self" rel="noopener noreferrer" >Outreach</a>
+        <a class="nav-link p-2 m-2 {{ 'active' if '/outreach' in page.url }}" href="{{site.url + 'outreach/'}}" target="_self" rel="noopener noreferrer" >Outreach</a>
       </li>
       <li class="nav-item col-6 col-md-auto">
-        <a class="nav-link p-2 {{ 'active' if '/get-involved' in page.url }}" href="{{site.url + 'get-involved/'}}" target="_self" rel="noopener noreferrer" >Get Involved</a>
+        <a class="nav-link p-2 m-2 {{ 'active' if '/get-involved' in page.url }}" href="{{site.url + 'get-involved/'}}" target="_self" rel="noopener noreferrer" >Get Involved</a>
       </li>
       <li class="nav-item col-6 col-md-auto">
-        <a class="nav-link p-2 {{ 'active' if '/contact' in page.url }}" href="{{site.url + 'contact/'}}" target="_self" rel="noopener noreferrer" >Contact</a>
+        <a class="nav-link p-2 m-2 {{ 'active' if '/contact' in page.url }}" href="{{site.url + 'contact/'}}" target="_self" rel="noopener noreferrer" >Contact</a>
       </li>
       <li class="nav-item col-6 col-md-auto">
-        <a class="nav-link p-2 btn text-primary bg-warning" href="https://www.paypal.com/" target="_blank" rel="noopener noreferrer">Donate</a>
+        <a class="nav-link p-2 m-2 btn text-primary bg-warning" href="https://www.paypal.com/" target="_blank" rel="noopener noreferrer">Donate</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle p-2 {{ 'active' if '/sign-up/' in page.url }}" href="#" role="button" target="_self" rel="noopener noreferrer"  data-bs-toggle="dropdown">Sign-Up</a>
+        <a class="nav-link dropdown-toggle p-2 m-2 {{ 'active' if '/sign-up/' in page.url }}" href="#" role="button" target="_self" rel="noopener noreferrer"  data-bs-toggle="dropdown">Sign-Up</a>
         <ul class="dropdown-menu dropdown-menu-end ">
           <li><a class="dropdown-item" href="{{site.url + 'sign-up/assessment/#'}}" target="_self" rel="noopener noreferrer" >Assessment</a></li>
           <li><a class="dropdown-item" href="{{site.url + 'sign-up/class-group/#'}}" target="_self" rel="noopener noreferrer" >Class / Group</a></li>
