--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -49,7 +49,7 @@
         <ul class="list-unstyled">
           <li class="text-center">
             <a class="" target="_blank" rel="noopener" href="https://www.guidestar.org/profile/84-2586015">
-              <img class="certificate-link" src="{{site.url + './images/candid-2022-silver-transparency-award.webp'}}" alt="NWASST profile on Guidestar">
+              <img class="certificate-link" src="{{site.url + './images/candid-2022-silver-transparency-award.webp'}}" alt="NWASST's profile on Guidestar">
             </a>
           </li>
           <li class="text-center">
