--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -2,6 +2,7 @@
 title: Sitemap | NWA Second Stage Transition's website sitemap. 
 permalink: /sitemap.xml
 eleventyExcludeFromCollections: true
+author: Cecelia D.
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <?xml-stylesheet type="text/xsl" href="/sitemap.xsl"?>
