--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -83,7 +83,7 @@ html, body {
   background-color: #eee;
 }
 .landing {
-  background-image: url("https://nwasecondstagetransition.org/images/avenue-1920w.jpg");
+  background-image: url("https://nwasecondstagetransition.org/images/trees-along-path.jpg");
   max-height: 100vh;
   min-height: 100vh;
   /* Full height */
