--- a/src/404.njk
+++ b/src/404.njk
@@ -6,11 +6,8 @@ templateEngineOverride: njk,md
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
   <div class="col-md-10 p-3 mb-5 bg-white-transparent rounded max-width">
-    <h1 class="h1">404 - The link  you request cannot be found.</h1>
-    <p class="p-3 lead">Please let us know what link cannot be found.</p>
-    <p class="p-3 lead">
-     We would appreciate if you send us the URL that you were  trying to access when you were redirected to our error page (404 page). Thank you! <a href="mailto:{{site.email}}">Contact us</a>
-    </p>
+    <h1 class="h1">Error 404</h1>
+    <p class="p-3 lead">The page you requested was not found.</p>
     <p class="p-3 lead">
       <a class="btn btn-outline-secondary btn-sm" href="{{site.url}}" role="button" target="_self" rel="noopener noreferrer" >Continue to homepage</a>
     </p>
