--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -27,7 +27,7 @@
         <a class="nav-link p-2 m-2 {{ 'active' if '/contact' in page.url }}" href="{{site.url + 'contact/'}}" target="_self" rel="noopener noreferrer" >Contact</a>
       </li>
       <li class="nav-item col-6 col-md-auto">
-        <a class="nav-link p-2 m-2 btn text-primary bg-warning" href="https://www.paypal.com/" target="_blank" rel="noopener noreferrer">Donate</a>
+        <a class="nav-link p-2 m-2 btn text-primary bg-warning" href="{{site.paypal_url}}" target="_blank" rel="noopener noreferrer">Donate</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle p-2 m-2 {{ 'active' if '/sign-up/' in page.url }}" href="#" role="button" target="_self" rel="noopener noreferrer"  data-bs-toggle="dropdown">Sign-Up</a>
