--- a/src/404.njk
+++ b/src/404.njk
@@ -2,6 +2,7 @@
 title: 404 Error | NWASST's missing website page.
 layout: base.njk
 templateEngineOverride: njk,md
+permalink: 404.html
 ---
 <!-- Page Intro -->
 <div class="row justify-content-center text-center">
