--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,5 +1,5 @@
 <nav aria-label="Main navigation" class="container-xxl flex-wrap flex-md-nowrap">
-  <a aria-label="NWASST" class="navbar-brand p-0 me-3" href="/"><img alt="NWASST's logo" class="custom-media me-1 img-fluid" id="logo" src="{{site.url + 'images/nwasst-logo-with-name-revised-white.svg'}}"target="_self" rel="noopener noreferrer"></a> 
+  <a aria-label="NWASST" class="navbar-brand p-0 me-3" href="/"><img alt="NWASST's logo" class="custom-media me-1 img-fluid" id="logo" src="{{site.url + 'images/nwasst-logo.svg'}}"target="_self" rel="noopener noreferrer"></a> 
   <button aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#bdNavbar" data-bs-toggle="collapse" type="button"><svg class="bi" height="32" viewbox="0 0 16 16" style="color:white;" width="32" xmlns="http://www.w3.org/2000/svg">
   <path d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" fill-rule="evenodd"></path></svg></button>
   <div class="collapse navbar-collapse" id="bdNavbar">
