--- a/src/_layouts/redirect.njk
+++ b/src/_layouts/redirect.njk
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     {% include '../_includes/head.html' %}
-    <meta http-equiv="refresh" content="0; URL='{{ destination }}'" />
+    <meta http-equiv="refresh" content="0;"" URL="{{ site.url + redirect.to }}" />
     <title>Redirecting to: {{ destination }}</title>  
 </head>
 <body>
