--- a/src/redirect.njk
+++ b/src/redirect.njk
@@ -23,3 +23,10 @@ permalink: "{{ redirect.from }}"
 # The "redirect" layout just has a small html header with the meta tags that do redirection.
 layout: redirect
 ---
+<div class="row justify-content-center text-center">
+  <div class="col-md-10 p-3 my-5  bg-white-transparent rounded max-width">
+    <h1 class="h1">Something went wrong.</h1>
+    <p class="">You should have been redirected to <a href="{{ site.url + redirect.to }}" target="_self" rel="noopener noreferrer">{{ site.url + redirect.to }}</a></p>
+    <p class="lead mt-3"><a class="btn text-black bg-warning" href="{{ site.url + redirect.to }}" target="_self" rel="noopener noreferrer" >Click to go to this new link.</a></p>
+  </div>
+</div> 	
