--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -5,9 +5,7 @@ templateEngineOverride: njk,md
 <html lang="en">
   <head>
     {% include '../_includes/head.html' %}
-    <title>{{ title }}</title>
-    {% if page.fileSlug == ''%}<link rel="preload" href="{{site.url + '/images/trees-along-path-2300.webp'}}" as="image">{% endif %}
-    {% if page.fileSlug == '/admin/'%}<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif %}
+    <title>{{ title }}</title>{% if page.fileSlug == ''%}<link rel="preload" href="{{site.url + '/images/trees-along-path-2300.webp'}}" as="image">{% endif %}{% if page.fileSlug == '/admin/'%}<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif %}
     </head>
   <body class="text">
     <header>
