--- a/src/index.njk
+++ b/src/index.njk
@@ -7,6 +7,6 @@ templateEngineOverride: njk,md
   <div class="col-md-10 p-3 my-5  bg-white-transparent rounded max-width">
     <h1 class="h1">After the rain, the sun will shine.</h1>
     <p class="lead p-3 ">We empower individuals transition to a new stage in life. Learn more about our purpose and vision at NWA Second Stage Transition.</p>
-    <p class="lead mt-3"><a class="btn text-black bg-warning" href="{{site.url + '/about/'}}" target="_self" rel="noopener noreferrer" >Learn More</a></p>
+    <p class="lead mt-3"><a class="btn text-black bg-warning" href="{{site.url + '/about/'}}" target="_self" rel="noopener noreferrer" >Learn More About Us</a></p>
   </div>
 </div>
