--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -2,7 +2,7 @@
   <a aria-label="NWASST" class="navbar-brand p-0 me-3" href="/">
     <picture>
       <source media="(min-width:650px)" srcset="{{site.url + '/images/nwasst-logo-160.webp'}}">
-      <img class="custom-media me-1 img-fluid"  src="{{site.url + '/images/nwasst-logo-80.webp'}}" alt="NWASST Logo" style="width:auto;" target="_self" rel="noopener noreferrer">
+      <img class="custom-media me-1 img-fluid"  src="{{site.url + '/images/nwasst-logo-80.webp'}}" alt="NWASST Logo" style="width:auto;" rel="noopener noreferrer">
     </picture>
   </a> 
   <button aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#bdNavbar" data-bs-toggle="collapse" type="button"><svg class="bi" height="32" viewbox="0 0 16 16" style="color:white;" width="32" xmlns="http://www.w3.org/2000/svg">
