--- a/src/contact.njk
+++ b/src/contact.njk
@@ -37,7 +37,7 @@ templateEngineOverride: njk,md
 <div class="container py-3">
   <div class="contact-form d-flex flex-row justify-content-center">
     <div class="embed-responsive mt-3" style="overflow:hidden;">
-      <iframe  width="640" height="1082" marginheight="0" marginwidth="0" src="https://docs.google.com/forms/d/e/1FAIpQLSf59qzzDJ3IFh_Rw1NDSuLDIuhw8dA3PGmO-OweJQreRNI-hw/viewform?embedded=true"></iframe>
+      <iframe  width="640" height="1082" src="https://docs.google.com/forms/d/e/1FAIpQLSf59qzzDJ3IFh_Rw1NDSuLDIuhw8dA3PGmO-OweJQreRNI-hw/viewform?embedded=true"></iframe>
     </div>
   </div>
 </div>
