--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -16,6 +16,6 @@ templateEngineOverride: njk,md
     </div>
     <footer class="bg-blue">{% include '../_includes/footer.html' %}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{site.url + '/javascript/footer-javascript.js'}}"></script>
+    <script src="{{site.url + '/js/custom.js'}}"></script>
   </body>
 </html>
