--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -6,6 +6,7 @@ templateEngineOverride: njk,md
   <head>
     {% include '../_includes/head.njk' %}
     <title>{{ title }}</title>{% if page.fileSlug == ''%}<link rel="preload" href="{{site.url + '/img/trees-along-path-1920.webp'}}" as="image">{% endif %}{% if page.fileSlug == '/admin/'%}<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif %}
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" as="script" defer>
     </head>
   <body class="text">
     <header>
