--- a/src/_layouts/redirect.njk
+++ b/src/_layouts/redirect.njk
@@ -7,6 +7,7 @@ templateEngineOverride: njk,md
     {% include '../_includes/head.njk' %}
     <meta http-equiv="refresh" content="3;" URL="{{ site.url + redirect.to }}">
     <title>Redirecting to: {{ destination }}</title>
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" as="script" defer>
   </head>
   <body class="text ">
     <header>
