--- a/src/_layouts/redirect.njk
+++ b/src/_layouts/redirect.njk
@@ -8,6 +8,7 @@ templateEngineOverride: njk,md
     <meta http-equiv="refresh" content="3;" URL="{{ site.url + redirect.to }}">
     <title>Redirecting to: {{ destination }}</title>
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" as="script" defer>
+    <meta http-equiv="expires" content="4500"/>
   </head>
   <body class="text ">
     <header>
